fix icon spacing

--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -349,7 +349,7 @@ section#about{
   .icon {
     font-size: 2em;
     text-align: center;
-    margin: 0.8em 1em;
+    margin: 0.8em 0.6em;
   }
 
   .icon:hover {
